--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -17,8 +17,8 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
       {% endif %}
       {{ content | link | highlight | safe}}
     </div>
-    <div>
-    ---
+    <div class="content">
+    <hr>
     </div
   </body>
 </html>
