--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -19,6 +19,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     </div>
     <div class="content">
     <hr>
-    </div
+    <ceter><h2>artisthlete.ac</h2></center>
+    </div>
   </body>
 </html>
