--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -13,7 +13,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
 
     <div class="content">
       {% if dgHomeLink !== false%}
-        <a href="/">artisthlete.ac</a> - {{ page.fileSlug }}
+        <a href="/">artisthlete.ac</a> - {{ page.fileSlug  | slugify }}
       {% endif %}
       {{ content | link | highlight | safe}}
     </div>
