--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -20,7 +20,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     <div class="content">
     <hr>
     <ceter><h2>artisthlete.ac</h2></center>
-    <ceter><small>© 2022 ZEJUN YAO. All rights reserved.</small></center>
+    <p style="font-size: x-small">© 2022 ZEJUN YAO. All rights reserved.</p>
     </div>
   </body>
 </html>
