--- a/src/site/_includes/layouts/note.njk
+++ b/src/site/_includes/layouts/note.njk
@@ -19,7 +19,7 @@ permalink: "notes/{{ page.fileSlug | slugify }}/"
     </div>
     <div class="content">
     <hr>
-    <ceter><h2>artisthlete.ac</h2></center>
+    <center><h2>artisthlete.ac</h2></center>
     <p style="font-size: x-small">© 2022 ZEJUN YAO. All rights reserved.</p>
     </div>
   </body>
